lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__path_segment.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"A\", |p| p.path_segment(PathSegmentKind::Expr))"
---
PATH_SEGMENT: 0..1 
  IDENT: 0..1 "A"
