lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__pattern-2.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"_\", |p| p.pattern())"
---
WILDCARD_PAT: 0..1 
  WILDCARD: 0..1 "_"
