lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__pattern-3.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"Color::Red\", |p| p.pattern())"
---
PATH_PAT: 0..10 
  PATH: 0..10 
    PATH_SEGMENT: 0..5 
      IDENT: 0..5 "Color"
    COLON: 5..6 ":"
    COLON: 6..7 ":"
    PATH_SEGMENT: 7..10 
      IDENT: 7..10 "Red"
