lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__pattern-4.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"10.1\", |p| p.pattern())"
---
LIT_PAT: 0..4 
  FLOAT: 0..4 "10.1"
