lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__pattern-5.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"'hello there!'\", |p| p.pattern())"
---
LIT_PAT: 0..14 
  SINGLE_STRING: 0..14 "'hello there!'"
