lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__pattern-6.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"true\", |p| p.pattern())"
---
LIT_PAT: 0..4 
  TRUE_KW: 0..4 "true"
