lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__pattern.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"ident\", |p| p.pattern())"
---
NAME_PAT: 0..5 
  NAME: 0..5 
    IDENT: 0..5 "ident"
