lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__stmt_expr-2.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"1+1;\", |p| p.stmt_expr())"
---
EXPR_STMT: 0..4 
  BINARY_EXPR: 0..3 
    LIT_EXPR: 0..1 
      INT: 0..1 "1"
    PLUS: 1..2 "+"
    LIT_EXPR: 2..3 
      INT: 2..3 "1"
  SEMI: 3..4 ";"
