lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__stmt_expr-3.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"print();\", |p| { _ = p.stmt_expr() })"
---
EXPR_STMT: 0..8 
  CALL_EXPR: 0..7 
    PATH_EXPR: 0..5 
      PATH: 0..5 
        IDENT: 0..5 "print"
    ARG_LIST: 5..7 
      L_PAREN: 5..6 "("
      R_PAREN: 6..7 ")"
  SEMI: 7..8 ";"
