lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__stmt_expr-5.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"vec2 { };\", |p| { _ = p.stmt_expr() })"
---
EXPR_STMT: 0..9 
  RECORD_EXPR: 0..8 
    PATH: 0..4 
      IDENT: 0..4 "vec2"
    WHITESPACE: 4..5 
    L_BRACE: 5..6 "{"
    WHITESPACE: 6..7 
    R_BRACE: 7..8 "}"
  SEMI: 8..9 ";"
